# axum-loco-demo

./: COMPARISON_SUMMARY.md  Cargo.toml  PROJECT_STATUS.md  README.md
axum-server/: Cargo.toml
axum-server/src/: main.rs
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
loco-server/: Cargo.toml
loco-server/src/: main.rs
shared/: Cargo.toml
shared/src/: auth.rs  benchmarks.rs  graphql.rs  lib.rs  models.rs  shopify.rs
