# benchmarks/Cargo.toml - Benchmarking application for AXUM vs LOCO comparison
[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared utilities
shared = { path = "../shared" }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Benchmarking
criterion = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
