# loco-server/Cargo.toml - LOCO server implementation for comparison
[package]
name = "loco-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared utilities
shared = { path = "../shared" }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Web framework (using Axum as base for LOCO-style implementation)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# GraphQL
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# Authentication and security
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }

# Database and utilities
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

# Additional dependencies for LOCO
futures-util = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
